--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,86 @@
 
 .menu li{
     float: right;
-
+    line-height: 68px;
+    padding:0 20px;
 }
 
 .menu li a{
-    padding: 10px;
-    line-height: 68px;
+    
+    
     color: #4d4d4d;
     font-size: 17px;
+}
+
+.body{
+    width: 100%;
+    height: 600px;
+    background: indigo;
+}
+
+.footer{
+    background: rgb(58, 56, 56);
+    width: 100%;
+    height: 220px;
+    text-align: center;
+    float: right;
+}
+
+.footer p{
+    font-size: 30px;
+    color: #fff;
+    margin-top: 100px;
+}
+
+.HeaderImage{
+    width: 100%;
+    height: 470px;
+    float: right;
+    position: relative
+}
+
+.HeaderImage img{
+    width: 100%;
+    height: 100%;
+}
+
+.search{
+    width: 50%;
+    height: 55px;
+    border-radius: 40px;
+    box-shadow: 0 0 10px #fff ;
+    position:absolute;
+    left: 0;
+    right: 0;
+    top: 233px;
+    bottom: 0;
+    margin: 0 auto;
+
+
+}
+
+.search .inputSearch{
+    
+    background: #fff;
+    width: 100%;
+    height: 55px;
+    padding:0 25px;
+    font-size: 20px;
+    border-radius: 40px;
+    text-align: right;
+
+}
+
+.searchBtn{
+    width: 15%;
+    height: 100%;
+    background: rgb(14, 138, 215);
+    color: #fff;
+    text-align: center;
+    border-radius: 40px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+
 }
