--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     font-size: 15px;
     text-decoration: none;
     list-style: none;
+    direction: rtl;
 }
 
 .clear{
@@ -183,4 +184,85 @@
 
 .postFooter a:hover{
     color: blue;
+}
+
+.sidebar{
+    float: right;
+    width: 17%;
+    height: 700px;
+    background: #eee;
+    margin-left: 5px;
+}
+
+.content{
+    float: left;
+    height: 700px;
+    width: 82.5px;
+    padding: 50px;
+}
+
+.accordion{
+    height: auto;
+    background: #fff;
+}
+
+.accordion ul > li > a{
+    display: block;
+    color: #4d4d4d;
+    padding: 10px 22px;
+    background: #fff;
+    border-bottom: 1px solid #f6f6f6;
+    position: relative;
+    cursor: pointer;
+}
+
+.accordion ul > li > ul> li> a{
+    padding: 9px 32px;
+    display: block;
+    background: #f5f5f5;
+    color: #4d4d4d;
+    border-bottom: 1px solid #f6f6f6;
+    cursor: pointer;
+    
+}
+
+.accordion ul > li > ul> li> a:hover{
+    background: #21a1ff;
+    transition: all 300ms ease;
+    color: #fff;
+    border-bottom: 1px solid #21a1ff;
+}
+
+.accordion > ul li.has-sub > a::before{
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    background: #4d4d4d;
+    transition: all 300ms ease;
+    left: 30px;
+    top: 21px;
+    
+}
+
+.accordion > ul li.has-sub >a::after{
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 10px;
+    background: #4d4d4d;
+    transition: all 300ms ease;
+    left:34px;
+    top:17px;
+    
+}
+
+.accordion > ul li.has-sub.open > a::before,
+.accordion > ul li.has-sub.open > a::after{
+    transition: all 300ms ease;
+    transform: rotate(45deg);
+}
+
+.accordion ul ul{
+    display: none;
 }
